# AITookit_C

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  TERMS.md  THIRD_PARTY_NOTICES.md  vcpkg.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
cmake/: app_version.h.in  copy_runtime_deps.cmake  install_runtime_deps.cmake.in  qt_platform_plugin.cmake
docs/: CONFIGURATION.md  RELEASING.md  USER_GUIDE.md  产品化路线图.md
docs/superpowers/plans/: 2026-05-13-visual-model-tool-phase1.md  2026-05-14-ui-workbench-polish.md  2026-05-15-product-experience-and-architecture.md
docs/superpowers/specs/: 2026-05-13-visual-model-desktop-tool-design.md  2026-05-14-ui-workbench-polish-design.md
docs/算法说明/: 总览.md
docs/算法说明/推理后端/: ONNXRuntime推理后端.md  扩展推理后端.md
docs/算法说明/模型配置/: 模型清单规范.md
docs/算法说明/目标检测/: NMS非极大值抑制.md  YOLO目标检测.md
models/: checksums.json  yolov8n-cls.json  yolov8n-seg.json  yolov8n.json  yolov8s-seg.json  yolov8s.json
resources/: model_catalog.json
resources/icons/: app_icon.qrc  app_icon.rc
resources/themes/: app.qss
resources/translations/: ai_toolkit_en.ts  ai_toolkit_zh_CN.ts
scripts/: benchmark_models.py  check_coverage_threshold.ps1  download_builtin_models.ps1  download_sample_model.ps1  generate_sbom.py  install_vcpkg_deps.ps1  model_manifest.ps1  populate_catalog_checksums.ps1  refresh_catalog_checksums.ps1  run_coverage.ps1  sync_checksums_from_catalog.ps1  test_builtin_models.py  update_model_checksums.ps1
src/: CMakeLists.txt
src/app/: app_bootstrap.cpp  app_bootstrap.h  crash_handler.cpp  crash_handler.h  main.cpp
src/core/: app_logger.cpp  app_logger.h  app_paths.cpp  app_paths.h  catalog_url_validator.cpp  catalog_url_validator.h  error.h  image_algorithms.cpp  image_algorithms.h  json_utils.cpp  json_utils.h  model_checksum.cpp  model_checksum.h  model_manifest.cpp  model_manifest.h  network_fetch.cpp  network_fetch.h  settings_store.cpp  settings_store.h  types.h  unicode_path.cpp  unicode_path.h  update_checker.cpp  update_checker.h
src/models/: classification_model.cpp  classification_model.h  inference_backend.cpp  inference_backend.h  postprocess_registry.cpp  postprocess_registry.h  segmentation_model.cpp  segmentation_model.h  yolo_detection_model.cpp  yolo_detection_model.h
src/runtime/: backend_plugin.h  backend_registry.cpp  backend_registry.h  inference_backend.h  onnx_backend.cpp  onnx_backend.h  onnx_plugin.cpp  onnx_plugin.h  openvino_plugin.cpp  openvino_plugin.h  tensorrt_plugin.cpp  tensorrt_plugin.h
src/services/: export_service.cpp  export_service.h  inference_service.cpp  inference_service.h  inference_worker.cpp  inference_worker.h  model_service.cpp  model_service.h  unicode_io.cpp  unicode_io.h
src/ui/: app_controller.cpp  app_controller.h  image_utils.cpp  image_utils.h  license_utils.cpp  license_utils.h  main_window.cpp  main_window.h  nav_panel.cpp  nav_panel.h
src/ui/dialogs/: model_catalog_dialog.cpp  model_catalog_dialog.h  onnx_setup_dialog.cpp  onnx_setup_dialog.h
src/ui/pages/: home_page.cpp  home_page.h  inference_page.cpp  inference_page.h  models_page.cpp  models_page.h  results_page.cpp  results_page.h  settings_page.cpp  settings_page.h
src/ui/widgets/: image_preview_widget.cpp  image_preview_widget.h
tests/: CMakeLists.txt  test_app_controller.cpp  test_backend_registry.cpp  test_catalog_url_validator.cpp  test_classification_model.cpp  test_export_service.cpp  test_gui_validation.cpp  test_helpers.h  test_inference_service.cpp  test_inference_worker.cpp  test_main.cpp  test_main_window.cpp  test_model_checksum.cpp  test_model_manifest.cpp  test_model_service.cpp  test_models_page.cpp  test_onnx_backend.cpp  test_peers.h  test_postprocess_registry.cpp  test_results_page.cpp  test_segmentation_model.cpp  test_settings_page.cpp  test_settings_store.cpp  test_unicode_io.cpp  test_yolo_postprocess.cpp
